colcon_ws/log/build_2022-09-10_08-55-23/gatekeeper/stderr.log
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:56:3: error: ‘target_x’ does not name a type
   56 |   target_x = 0.0;
      |   ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:57:3: error: ‘target_y’ does not name a type
   57 |   target_y = 0.0;
      |   ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:58:3: error: ‘target_z’ does not name a type
   58 |   target_z = 1.0;
      |   ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:59:3: error: ‘target_yaw’ does not name a type
   59 |   target_yaw = 0.0;
      |   ^~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp: In member function ‘void NominalController::joy_callback(sensor_msgs::msg::Joy_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:83:5: error: ‘target_x’ was not declared in this scope
   83 |     target_x += cmd_roll/10.0;
      |     ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:84:5: error: ‘target_y’ was not declared in this scope
   84 |     target_y += cmd_pitch/10.0;
      |     ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:85:5: error: ‘target_z’ was not declared in this scope
   85 |     target_z += cmd_throttle/10.0;
      |     ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:86:5: error: ‘target_yaw’ was not declared in this scope; did you mean ‘last_yaw’?
   86 |     target_yaw += cmd_yaw / 10.0;
      |     ^~~~~~~~~~
      |     last_yaw
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:90:16: error: ‘std_max’ was not declared in this scope
   90 |     target_x = std_max(last_x - 1.0, std::min(target_x, last_x + 1.0));
      |                ^~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp: In member function ‘void NominalController::timer_callback()’:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:132:22: error: ‘target_x’ was not declared in this scope
  132 |     msg.xs.push_back(target_x);
      |                      ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:133:22: error: ‘target_y’ was not declared in this scope
  133 |     msg.ys.push_back(target_y);
      |                      ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:134:22: error: ‘target_z’ was not declared in this scope
  134 |     msg.zs.push_back(target_z);
      |                      ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:135:24: error: ‘target_yaw’ was not declared in this scope; did you mean ‘last_yaw’?
  135 |     msg.yaws.push_back(target_yaw);
      |                        ^~~~~~~~~~
      |                        last_yaw
make[2]: *** [CMakeFiles/nominal_controller.dir/build.make:63: CMakeFiles/nominal_controller.dir/src/nominal_controller.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/nominal_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
